# rag-knowledge-assistant

rag-knowledge-assistant-main/: .env  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  render.yaml  vercel.json
rag-knowledge-assistant-main/.github/workflows/: ci.yml
rag-knowledge-assistant-main/src/rag_assistant/: __init__.py  api.py  cli.py  config.py  embeddings.py  evals.py  knowledge_base.py  models.py
rag-knowledge-assistant-main/tests/: test_api.py  test_knowledge_base.py  test_persistence_and_middleware.py  test_smoke_endpoints.py
rag-knowledge-assistant-main/ui/: index.html
